--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.0.6"
+    "@astrojs/mdx": "^0.16.0",
+    "@astrojs/solid-js": "^2.0.2",
+    "astro": "^2.0.6",
+    "solid-js": "^1.4.3"
   }
 }
